[gd_scene load_steps=14 format=3 uid="uid://cgvbhc2odbbjb"]

[ext_resource type="Script" path="res://scripts/Enemy.gd" id="1_34lyq"]
[ext_resource type="Texture2D" uid="uid://badgn0el75crx" path="res://assets/enemies/snake.png" id="1_tvssu"]
[ext_resource type="PackedScene" uid="uid://d0f3dnj1fb1vu" path="res://scenes/components/HealthBar.tscn" id="2_5pqvv"]
[ext_resource type="PackedScene" uid="uid://c81a5yush3ua1" path="res://scenes/components/HealthModule.tscn" id="2_rvap3"]
[ext_resource type="Texture2D" uid="uid://jv8jioai55mf" path="res://assets/shadow.png" id="3_nnjjf"]
[ext_resource type="AudioStream" uid="uid://cm2jj0cmfdfug" path="res://audio/snake-hissing.ogg" id="5_3gjmd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k3e0b"]
atlas = ExtResource("1_tvssu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u08x3"]
atlas = ExtResource("1_tvssu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fhyti"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3e0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u08x3")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_swwb4"]
radius = 4.0
height = 18.0

[sub_resource type="Animation" id="Animation_qf5d8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fmkwk"]
resource_name = "hit"
length = 0.16
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 0.4073, 0.338184, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_81n1y"]
_data = {
"RESET": SubResource("Animation_qf5d8"),
"hit": SubResource("Animation_fmkwk")
}

[node name="Snake" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 35
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_34lyq")
max_health = 30
attack = 5
speed = 40.0

[node name="EnemySprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_fhyti")
autoplay = "default"
frame_progress = 0.447541

[node name="Shadow" type="Sprite2D" parent="EnemySprite"]
show_behind_parent = true
position = Vector2(2, 7)
scale = Vector2(1.515, 1)
texture = ExtResource("3_nnjjf")

[node name="HealthModule" parent="." instance=ExtResource("2_rvap3")]

[node name="HealthBar" parent="HealthModule" instance=ExtResource("2_5pqvv")]
offset_left = -9.0
offset_top = -13.0
offset_right = 51.0
offset_bottom = -7.0
scale = Vector2(0.3, 0.3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_swwb4")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="EnemyAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../EnemySprite")
libraries = {
"": SubResource("AnimationLibrary_81n1y")
}

[node name="Cry" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_3gjmd")
attenuation = 6.27667

[node name="CryTimer" type="Timer" parent="."]
process_callback = 0
autostart = true

[connection signal="timeout" from="CryTimer" to="." method="_on_cry_timer_timeout"]
